src/parser.c
//
// parser.c
// 
// Copyright 2024 The PowerC Authors and Contributors.
// 
// This file is part of the PowerC Project.
// For detailed license information, please refer to the LICENSE file
// located in the root directory of this project.
//

#include "parser.h"
#include <stdbool.h>
#include <stdio.h>
#include <stdlib.h>

#define current(p) ((p)->lex.token)

#define match(p, t) (current(p).kind == (t))

#define next(p) \
  do { \
    lexer_next(&(p)->lex); \
  } while (0)

#define consume(p, t) \
  do { \
    if (!match((p), (t))) \
      unexpected_token_error(p); \
    next(p); \
  } while (0)

static inline void unexpected_token_error(Parser *parser);
static inline AstNode *parse_module(Parser *parser);
static inline AstNode *parse_decl(Parser *parser);
static inline AstNode *parse_import_decl(Parser *parser);
static inline AstNode *parse_typealias_decl(Parser *parser);
static inline AstNode *parse_type_params(Parser *parser);
static inline AstNode *parse_type_param(Parser *parser);
static inline AstNode *parse_type(Parser *parser);
static inline AstNode *parse_func_type(Parser *parser);
static inline AstNode *parse_param_type(Parser *parser);
static inline AstNode *parse_type_def(Parser *parser);
static inline AstNode *parse_func_decl(Parser *parser, bool isAnon);
static inline AstNode *parse_param(Parser *parser);
static inline AstNode *parse_block(Parser *parser);
static inline AstNode *parse_struct_decl(Parser *parser);
static inline AstNode *parse_struct_member(Parser *parser);
static inline AstNode *parse_interface_decl(Parser *parser);
static inline AstNode *parse_interface_member(Parser *parser);
static inline AstNode *parse_const_decl(Parser *parser);
static inline AstNode *parse_var_decl(Parser *parser);
static inline AstNode *parse_stmt(Parser *parser);
static inline AstNode *parse_if_stmt(Parser *parser);
static inline AstNode *parse_switch_stmt(Parser *parser);
static inline AstNode *parse_while_stmt(Parser *parser);
static inline AstNode *parse_do_while_stmt(Parser *parser);
static inline AstNode *parse_for_stmt(Parser *parser);
static inline AstNode *parse_break_stmt(Parser *parser);
static inline AstNode *parse_continue_stmt(Parser *parser);
static inline AstNode *parse_return_stmt(Parser *parser);
static inline AstNode *parse_expr(Parser *parser);
static inline AstNode *parse_or_expr(Parser *parser);
static inline AstNode *parse_and_expr(Parser *parser);
static inline AstNode *parse_bor_expr(Parser *parser);
static inline AstNode *parse_bxor_expr(Parser *parser);
static inline AstNode *parse_band_expr(Parser *parser);
static inline AstNode *parse_eq_expr(Parser *parser);
static inline AstNode *parse_comp_expr(Parser *parser);
static inline AstNode *parse_shift_expr(Parser *parser);
static inline AstNode *parse_range_expr(Parser *parser);
static inline AstNode *parse_add_expr(Parser *parser);
static inline AstNode *parse_mul_expr(Parser *parser);
static inline AstNode *parse_unary_expr(Parser *parser);
static inline AstNode *parse_prim_expr(Parser *parser);
static inline AstNode *parse_array_expr(Parser *parser);
static inline AstNode *parse_new_expr(Parser *parser);
static inline AstNode *parse_ref_expr(Parser *parser);
static inline AstNode *parse_ident_expr(Parser *parser);
static inline AstNode *parse_try_expr(Parser *parser);
static inline AstNode *parse_call(Parser *parser, AstNode *lhs);
static inline AstNode *parse_subscr(Parser *parser, AstNode *lhs);
static inline AstNode *parse_if_expr(Parser *parser);

static inline void unexpected_token_error(Parser *parser)
{
  Lexer *lex = &parser->lex;
  Token *token = &lex->token;
  if (token->kind == TOKEN_KIND_EOF)
  {
    fprintf(stderr, "\nERROR: unexpected end of file\n");
    goto end;
  }
  fprintf(stderr, "\nERROR: unexpected token '%.*s'\n", token->length, token->chars);
end:
  fprintf(stderr, "--> %s:%d:%d\n", lex->file, token->ln, token->col);
  exit(EXIT_FAILURE);
}

static inline AstNode *parse_module(Parser *parser)
{
  AstNonLeafNode *module = ast_nonleaf_node_new(AST_NODE_KIND_MODULE);
  while (!match(parser, TOKEN_KIND_EOF))
  {
    AstNode *decl = parse_decl(parser);
    ast_nonleaf_node_append_child(module, decl);
  }
  return (AstNode *) module;
}

static inline AstNode *parse_decl(Parser *parser)
{
  if (match(parser, TOKEN_KIND_IMPORT_KW))
    return parse_import_decl(parser);
  if (match(parser, TOKEN_KIND_TYPEALIAS_KW))
    return parse_typealias_decl(parser);
  if (match(parser, TOKEN_KIND_FN_KW))
    return parse_func_decl(parser, false);
  if (match(parser, TOKEN_KIND_STRUCT_KW))
    return parse_struct_decl(parser);
  if (match(parser, TOKEN_KIND_INTERFACE_KW))
    return parse_interface_decl(parser);
  if (match(parser, TOKEN_KIND_CONST_KW))
    return parse_const_decl(parser);
  unexpected_token_error(parser);
  return NULL;
}

static inline AstNode *parse_import_decl(Parser *parser)
{
  next(parser);
  if (!match(parser, TOKEN_KIND_STRING))
    unexpected_token_error(parser);
  Token token = current(parser);
  next(parser);
  AstNonLeafNode *importDecl = ast_nonleaf_node_new(AST_NODE_KIND_IMPORT_DECL);
  AstNode *ident = (AstNode *) ast_leaf_node_new(AST_NODE_KIND_IDENT, token);
  ast_nonleaf_node_append_child(importDecl, ident);
  if (!match(parser, TOKEN_KIND_AS_KW))
  {
    consume(parser, TOKEN_KIND_SEMICOLON);
    return (AstNode *) importDecl;
  }
  next(parser);
  if (!match(parser, TOKEN_KIND_IDENT))
    unexpected_token_error(parser);
  token = current(parser);
  next(parser);
  ident = (AstNode *) ast_leaf_node_new(AST_NODE_KIND_IDENT, token);
  AstNonLeafNode *rename = ast_nonleaf_node_new(AST_NODE_KIND_RENAME);
  ast_nonleaf_node_append_child(rename, (AstNode *) importDecl);
  ast_nonleaf_node_append_child(rename, ident);
  consume(parser, TOKEN_KIND_SEMICOLON);
  return (AstNode *) rename;
}

static inline AstNode *parse_typealias_decl(Parser *parser)
{
  next(parser);
  if (!match(parser, TOKEN_KIND_IDENT))
    unexpected_token_error(parser);
  Token token = current(parser);
  next(parser);
  AstNonLeafNode *typealiasDecl = ast_nonleaf_node_new(AST_NODE_KIND_TYPEALIAS_DECL);
  AstNode *ident = (AstNode *) ast_leaf_node_new(AST_NODE_KIND_IDENT, token);
  AstNode *typeParams = parse_type_params(parser);
  ast_nonleaf_node_append_child(typealiasDecl, ident);
  ast_nonleaf_node_append_child(typealiasDecl, typeParams);
  consume(parser, TOKEN_KIND_EQ);
  AstNode *type = parse_type(parser);
  consume(parser, TOKEN_KIND_SEMICOLON);
  ast_nonleaf_node_append_child(typealiasDecl, type);
  return (AstNode *) typealiasDecl;
}

static inline AstNode *parse_type_params(Parser *parser)
{
  if (!match(parser, TOKEN_KIND_LT))
    return NULL;
  next(parser);
  AstNonLeafNode *typeParams = ast_nonleaf_node_new(AST_NODE_KIND_TYPE_PARAMS);
  AstNode *typeParam = parse_type_param(parser);
  ast_nonleaf_node_append_child(typeParams, typeParam);
  while (match(parser, TOKEN_KIND_COMMA))
  {
    next(parser);
    typeParam = parse_type_param(parser);
    ast_nonleaf_node_append_child(typeParams, typeParam);
  }
  consume(parser, TOKEN_KIND_GT);
  return (AstNode *) typeParams;
}

static inline AstNode *parse_type_param(Parser *parser)
{
  if (!match(parser, TOKEN_KIND_IDENT))
    unexpected_token_error(parser);
  Token token = current(parser);
  next(parser);
  AstNode *ident = (AstNode *) ast_leaf_node_new(AST_NODE_KIND_IDENT, token);
  if (!match(parser, TOKEN_KIND_COLON))
    return ident;
  next(parser);
  AstNode *type = parse_type(parser);
  AstNonLeafNode *constraint = ast_nonleaf_node_new(AST_NODE_KIND_CONSTRAINT);
  ast_nonleaf_node_append_child(constraint, ident);
  ast_nonleaf_node_append_child(constraint, type);
  return (AstNode *) constraint;
}

static inline AstNode *parse_type(Parser *parser)
{
  if (match(parser, TOKEN_KIND_FN_KW))
    return parse_func_type(parser);
  if (match(parser, TOKEN_KIND_IDENT))
    return parse_type_def(parser);
  unexpected_token_error(parser);
  return NULL;
}

static inline AstNode *parse_func_type(Parser *parser)
{
  next(parser);
  AstNode *type = parse_type(parser);
  consume(parser, TOKEN_KIND_LPAREN);
  AstNonLeafNode *params = ast_nonleaf_node_new(AST_NODE_KIND_PARAMS);
  if (match(parser, TOKEN_KIND_RPAREN))
  {
    next(parser);
    goto end;
  }
  AstNode *param = parse_param_type(parser);
  ast_nonleaf_node_append_child(params, param);
  while (match(parser, TOKEN_KIND_COMMA))
  {
    next(parser);
    param = parse_param_type(parser);
    ast_nonleaf_node_append_child(params, param);
  }
  consume(parser, TOKEN_KIND_RPAREN);
AstNonLeafNode *funcType;
end:
  funcType = ast_nonleaf_node_new(AST_NODE_KIND_FUNC_TYPE);
  ast_nonleaf_node_append_child(funcType, type);
  ast_nonleaf_node_append_child(funcType, (AstNode *) params);
  return (AstNode *) funcType;
}

static inline AstNode *parse_param_type(Parser *parser)
{
  if (match(parser, TOKEN_KIND_INOUT_KW))
  {
    next(parser);
    AstNode *type = parse_type(parser);
    AstNonLeafNode *inout = ast_nonleaf_node_new(AST_NODE_KIND_INOUT_PARAM);
    ast_nonleaf_node_append_child(inout, type);
    return (AstNode *) inout;
  }
  return parse_type(parser);
}

static inline AstNode *parse_type_def(Parser *parser)
{
  Token token = current(parser);
  next(parser);
  AstNode *ident = (AstNode *) ast_leaf_node_new(AST_NODE_KIND_IDENT, token);
  if (!match(parser, TOKEN_KIND_LT))
    return (AstNode *) ident;
  next(parser);
  AstNonLeafNode *typeDef = ast_nonleaf_node_new(AST_NODE_KIND_TYPE);
  ast_nonleaf_node_append_child(typeDef, ident);
  if (match(parser, TOKEN_KIND_GT))
  {
    next(parser);
    return (AstNode *) typeDef;
  }
  AstNode *type = parse_type(parser);
  ast_nonleaf_node_append_child(typeDef, type);
  while (match(parser, TOKEN_KIND_COMMA))
  {
    next(parser);
    type = parse_type(parser);
    ast_nonleaf_node_append_child(typeDef, type);
  }
  consume(parser, TOKEN_KIND_GT);
  return (AstNode *) typeDef;
}

static inline AstNode *parse_func_decl(Parser *parser, bool isAnon)
{
  next(parser);
  AstNode *type = parse_type(parser);
  AstNode *ident = NULL;
  if (!isAnon)
  {
    if (!match(parser, TOKEN_KIND_IDENT))
      unexpected_token_error(parser);
    Token token = current(parser);
    next(parser);
    ident = (AstNode *) ast_leaf_node_new(AST_NODE_KIND_IDENT, token);
  }
  consume(parser, TOKEN_KIND_LPAREN);
  AstNonLeafNode *params = ast_nonleaf_node_new(AST_NODE_KIND_PARAMS);
  if (match(parser, TOKEN_KIND_RPAREN))
  {
    next(parser);
    goto end;
  }
  AstNode *param = parse_param(parser);
  ast_nonleaf_node_append_child(params, param);
  while (match(parser, TOKEN_KIND_COMMA))
  {
    next(parser);
    param = parse_param(parser);
    ast_nonleaf_node_append_child(params, param);
  }
  consume(parser, TOKEN_KIND_RPAREN);
end:
  if (!match(parser, TOKEN_KIND_LBRACE))
    unexpected_token_error(parser);
  AstNode *block = parse_block(parser);
  AstNonLeafNode *funcDecl = ast_nonleaf_node_new(AST_NODE_KIND_FUNC_DECL);
  ast_nonleaf_node_append_child(funcDecl, type);
  ast_nonleaf_node_append_child(funcDecl, ident);
  ast_nonleaf_node_append_child(funcDecl, (AstNode *) params);
  ast_nonleaf_node_append_child(funcDecl, block);
  return (AstNode *) funcDecl;
}

static inline AstNode *parse_param(Parser *parser)
{
  AstNode *type = parse_param_type(parser);
  if (!match(parser, TOKEN_KIND_IDENT))
    unexpected_token_error(parser);
  Token token = current(parser);
  next(parser);
  AstNode *ident = (AstNode *) ast_leaf_node_new(AST_NODE_KIND_IDENT, token);
  AstNonLeafNode *param = ast_nonleaf_node_new(AST_NODE_KIND_VAR_DECL);
  ast_nonleaf_node_append_child(param, type);
  ast_nonleaf_node_append_child(param, ident);
  return (AstNode *) param;
}

static inline AstNode *parse_block(Parser *parser)
{
  next(parser);
  AstNonLeafNode *block = ast_nonleaf_node_new(AST_NODE_KIND_BLOCK);
  while (!match(parser, TOKEN_KIND_RBRACE))
  {
    AstNode *stmt = parse_stmt(parser);
    ast_nonleaf_node_append_child(block, stmt);
  }
  next(parser);
  return (AstNode *) block;
}

static inline AstNode *parse_struct_decl(Parser *parser)
{
  next(parser);
  if (!match(parser, TOKEN_KIND_IDENT))
    unexpected_token_error(parser);
  Token token = current(parser);
  next(parser);
  AstNonLeafNode *structDecl = ast_nonleaf_node_new(AST_NODE_KIND_STRUCT_DECL);
  AstNode *ident = (AstNode *) ast_leaf_node_new(AST_NODE_KIND_IDENT, token);
  AstNode *typeParams = parse_type_params(parser);
  ast_nonleaf_node_append_child(structDecl, ident);
  ast_nonleaf_node_append_child(structDecl, typeParams);
  consume(parser, TOKEN_KIND_LBRACE);
  if (match(parser, TOKEN_KIND_RBRACE))
  {
    next(parser);
    return (AstNode *) structDecl;
  }
  AstNode *member = parse_struct_member(parser);
  ast_nonleaf_node_append_child(structDecl, member);
  while (!match(parser, TOKEN_KIND_RBRACE))
  {
    member = parse_struct_member(parser);
    ast_nonleaf_node_append_child(structDecl, member);
  }
  next(parser);
  return (AstNode *) structDecl;
}

static inline AstNode *parse_struct_member(Parser *parser)
{
  AstNode *type = parse_type(parser);
  if (!match(parser, TOKEN_KIND_IDENT))
  {
    consume(parser, TOKEN_KIND_SEMICOLON);
    AstNonLeafNode *member = ast_nonleaf_node_new(AST_NODE_KIND_TYPE);
    ast_nonleaf_node_append_child(member, type);
    return (AstNode *) member;
  }
  Token token = current(parser);
  next(parser);
  AstNode *ident = (AstNode *) ast_leaf_node_new(AST_NODE_KIND_IDENT, token);
  consume(parser, TOKEN_KIND_SEMICOLON);
  AstNonLeafNode *member = ast_nonleaf_node_new(AST_NODE_KIND_VAR_DECL);
  ast_nonleaf_node_append_child(member, type);
  ast_nonleaf_node_append_child(member, ident);
  return (AstNode *) member;
}

static inline AstNode *parse_interface_decl(Parser *parser)
{
  next(parser);
  if (!match(parser, TOKEN_KIND_IDENT))
    unexpected_token_error(parser);
  Token token = current(parser);
  next(parser);
  AstNonLeafNode *interfaceDecl = ast_nonleaf_node_new(AST_NODE_KIND_INTERFACE_DECL);
  AstNode *ident = (AstNode *) ast_leaf_node_new(AST_NODE_KIND_IDENT, token);
  AstNode *typeParams = parse_type_params(parser);
  ast_nonleaf_node_append_child(interfaceDecl, ident);
  ast_nonleaf_node_append_child(interfaceDecl, typeParams);
  consume(parser, TOKEN_KIND_LBRACE);
  if (match(parser, TOKEN_KIND_RBRACE))
  {
    next(parser);
    return (AstNode *) interfaceDecl;
  }
  AstNode *member = parse_interface_member(parser);
  ast_nonleaf_node_append_child(interfaceDecl, member);
  while (!match(parser, TOKEN_KIND_RBRACE))
  {
    member = parse_interface_member(parser);
    ast_nonleaf_node_append_child(interfaceDecl, member);
  }
  next(parser);
  return (AstNode *) interfaceDecl;
}

static inline AstNode *parse_interface_member(Parser *parser)
{
  AstNode *type = parse_type(parser);
  if (!match(parser, TOKEN_KIND_IDENT))
  {
    consume(parser, TOKEN_KIND_SEMICOLON);
    AstNonLeafNode *member = ast_nonleaf_node_new(AST_NODE_KIND_TYPE);
    ast_nonleaf_node_append_child(member, type);
    return (AstNode *) member;
  }
  Token token = current(parser);
  next(parser);
  AstNode *ident = (AstNode *) ast_leaf_node_new(AST_NODE_KIND_IDENT, token);
  consume(parser, TOKEN_KIND_LPAREN);
  AstNonLeafNode *params = ast_nonleaf_node_new(AST_NODE_KIND_PARAMS);
  if (match(parser, TOKEN_KIND_RPAREN))
  {
    next(parser);
    goto proto;
  }
  AstNode *param = parse_param(parser);
  ast_nonleaf_node_append_child(params, param);
  while (match(parser, TOKEN_KIND_COMMA))
  {
    next(parser);
    param = parse_param(parser);
    ast_nonleaf_node_append_child(params, param);
  }
  consume(parser, TOKEN_KIND_RPAREN);
proto:
  consume(parser, TOKEN_KIND_SEMICOLON);
  AstNonLeafNode *member = ast_nonleaf_node_new(AST_NODE_KIND_FUNC_DECL);
  ast_nonleaf_node_append_child(member, type);
  ast_nonleaf_node_append_child(member, ident);
  ast_nonleaf_node_append_child(member, (AstNode *) params);
  ast_nonleaf_node_append_child(member, NULL);
  return (AstNode *) member;
}

static inline AstNode *parse_const_decl(Parser *parser)
{
  next(parser);
  if (!match(parser, TOKEN_KIND_IDENT))
    unexpected_token_error(parser);
  Token token = current(parser);
  next(parser);
  AstNode *ident = (AstNode *) ast_leaf_node_new(AST_NODE_KIND_IDENT, token);
  consume(parser, TOKEN_KIND_EQ);
  AstNode *expr = parse_expr(parser);
  consume(parser, TOKEN_KIND_SEMICOLON);
  AstNonLeafNode *constDecl = ast_nonleaf_node_new(AST_NODE_KIND_CONST_DECL);
  ast_nonleaf_node_append_child(constDecl, ident);
  ast_nonleaf_node_append_child(constDecl, expr);
  return (AstNode *) constDecl;
}

static inline AstNode *parse_var_decl(Parser *parser)
{
  next(parser);
  AstNode *type = parse_type(parser);
  if (!match(parser, TOKEN_KIND_IDENT))
    unexpected_token_error(parser);
  Token token = current(parser);
  next(parser);
  AstNode *ident = (AstNode *) ast_leaf_node_new(AST_NODE_KIND_IDENT, token);
  AstNode *expr = NULL;
  if (match(parser, TOKEN_KIND_EQ))
  {
    next(parser);
    expr = parse_expr(parser);
  }
  consume(parser, TOKEN_KIND_SEMICOLON);
  AstNonLeafNode *varDecl = ast_nonleaf_node_new(AST_NODE_KIND_VAR_DECL);
  ast_nonleaf_node_append_child(varDecl, type);
  ast_nonleaf_node_append_child(varDecl, ident);
  ast_nonleaf_node_append_child(varDecl, expr);
  return (AstNode *) varDecl;
}

static inline AstNode *parse_stmt(Parser *parser)
{
  if (match(parser, TOKEN_KIND_TYPEALIAS_KW))
    return parse_typealias_decl(parser);
  if (match(parser, TOKEN_KIND_FN_KW))
    return parse_func_decl(parser, false);
  if (match(parser, TOKEN_KIND_STRUCT_KW))
    return parse_struct_decl(parser);
  if (match(parser, TOKEN_KIND_INTERFACE_KW))
    return parse_interface_decl(parser);
  if (match(parser, TOKEN_KIND_CONST_KW))
    return parse_const_decl(parser);
  if (match(parser, TOKEN_KIND_VAR_KW))
    return parse_var_decl(parser);
  if (match(parser, TOKEN_KIND_LBRACE))
    return parse_block(parser);
  if (match(parser, TOKEN_KIND_IF_KW))
    return parse_if_stmt(parser);
  if (match(parser, TOKEN_KIND_SWITCH_KW))
    return parse_switch_stmt(parser);
  if (match(parser, TOKEN_KIND_WHILE_KW))
    return parse_while_stmt(parser);
  if (match(parser, TOKEN_KIND_DO_KW))
    return parse_do_while_stmt(parser);
  if (match(parser, TOKEN_KIND_FOR_KW))
    return parse_for_stmt(parser);
  if (match(parser, TOKEN_KIND_BREAK_KW))
    return parse_break_stmt(parser);
  if (match(parser, TOKEN_KIND_CONTINUE_KW))
    return parse_continue_stmt(parser);
  if (match(parser, TOKEN_KIND_RETURN_KW))
    return parse_return_stmt(parser);
  AstNode *expr = parse_expr(parser);
  consume(parser, TOKEN_KIND_SEMICOLON);
  return expr;
}

static inline AstNode *parse_if_stmt(Parser *parser)
{
  next(parser);
  AstNode *expr = parse_expr(parser);
  if (!match(parser, TOKEN_KIND_LBRACE))
    unexpected_token_error(parser);
  AstNode *thenBlock = parse_block(parser);
  AstNode *elseBlock = NULL;
  if (match(parser, TOKEN_KIND_ELSE_KW))
  {
    next(parser);
    if (!match(parser, TOKEN_KIND_LBRACE))
      unexpected_token_error(parser);
    elseBlock = parse_block(parser);
  }
  AstNonLeafNode *ifStmt = ast_nonleaf_node_new(AST_NODE_KIND_IF);
  ast_nonleaf_node_append_child(ifStmt, expr);
  ast_nonleaf_node_append_child(ifStmt, thenBlock);
  ast_nonleaf_node_append_child(ifStmt, elseBlock);
  return (AstNode *) ifStmt;
}

static inline AstNode *parse_switch_stmt(Parser *parser)
{
  next(parser);
  AstNode *expr = parse_expr(parser);
  consume(parser, TOKEN_KIND_LBRACE);
  AstNonLeafNode *switchStmt = ast_nonleaf_node_new(AST_NODE_KIND_SWITCH);
  ast_nonleaf_node_append_child(switchStmt, expr);
  while (match(parser, TOKEN_KIND_CASE_KW))
  {
    next(parser);
    expr = parse_expr(parser);
    consume(parser, TOKEN_KIND_COLON);
    AstNonLeafNode *switchCase = ast_nonleaf_node_new(AST_NODE_KIND_CASE);
    ast_nonleaf_node_append_child(switchCase, expr);
    while (!match(parser, TOKEN_KIND_CASE_KW)
        && !match(parser, TOKEN_KIND_DEFAULT_KW)
        && !match(parser, TOKEN_KIND_RBRACE))
    {
      AstNode *stmt = parse_stmt(parser);
      ast_nonleaf_node_append_child(switchCase, stmt);
    }
    ast_nonleaf_node_append_child(switchStmt, (AstNode *) switchCase);
  }
  AstNonLeafNode *switchDefault = NULL;
  if (match(parser, TOKEN_KIND_DEFAULT_KW))
  {
    next(parser);
    consume(parser, TOKEN_KIND_COLON);
    switchDefault = ast_nonleaf_node_new(AST_NODE_KIND_DEFAULT);
    while (!match(parser, TOKEN_KIND_RBRACE))
    {
      AstNode *stmt = parse_stmt(parser);
      ast_nonleaf_node_append_child(switchDefault, stmt);
    }
  }
  ast_nonleaf_node_append_child(switchStmt, (AstNode *) switchDefault);
  consume(parser, TOKEN_KIND_RBRACE);
  return (AstNode *) switchStmt;
}

static inline AstNode *parse_while_stmt(Parser *parser)
{
  next(parser);
  AstNode *expr = parse_expr(parser);
  if (!match(parser, TOKEN_KIND_LBRACE))
    unexpected_token_error(parser);
  AstNode *block = parse_block(parser);
  AstNonLeafNode *whileStmt = ast_nonleaf_node_new(AST_NODE_KIND_WHILE);
  ast_nonleaf_node_append_child(whileStmt, expr);
  ast_nonleaf_node_append_child(whileStmt, block);
  return (AstNode *) whileStmt;
}

static inline AstNode *parse_do_while_stmt(Parser *parser)
{
  next(parser);
  if (!match(parser, TOKEN_KIND_LBRACE))
    unexpected_token_error(parser);
  AstNode *block = parse_block(parser);
  consume(parser, TOKEN_KIND_WHILE_KW);
  AstNode *expr = parse_expr(parser);
  consume(parser, TOKEN_KIND_SEMICOLON);
  AstNonLeafNode *doWhileStmt = ast_nonleaf_node_new(AST_NODE_KIND_DO_WHILE);
  ast_nonleaf_node_append_child(doWhileStmt, block);
  ast_nonleaf_node_append_child(doWhileStmt, expr);
  return (AstNode *) doWhileStmt;
}

static inline AstNode *parse_for_stmt(Parser *parser)
{
  next(parser);
  if (!match(parser, TOKEN_KIND_IDENT))
    unexpected_token_error(parser);
  Token token = current(parser);
  next(parser);
  AstNode *ident = (AstNode *) ast_leaf_node_new(AST_NODE_KIND_IDENT, token);
  consume(parser, TOKEN_KIND_IN_KW);
  AstNode *expr = parse_expr(parser);
  if (!match(parser, TOKEN_KIND_LBRACE))
    unexpected_token_error(parser);
  AstNode *block = parse_block(parser);
  AstNonLeafNode *forStmt = ast_nonleaf_node_new(AST_NODE_KIND_FOR);
  ast_nonleaf_node_append_child(forStmt, ident);
  ast_nonleaf_node_append_child(forStmt, expr);
  ast_nonleaf_node_append_child(forStmt, block);
  return (AstNode *) forStmt;
}

static inline AstNode *parse_break_stmt(Parser *parser)
{
  Token token = current(parser);
  next(parser);
  consume(parser, TOKEN_KIND_SEMICOLON);
  return (AstNode *) ast_leaf_node_new(AST_NODE_KIND_BREAK, token);
}

static inline AstNode *parse_continue_stmt(Parser *parser)
{
  Token token = current(parser);
  next(parser);
  consume(parser, TOKEN_KIND_SEMICOLON);
  return (AstNode *) ast_leaf_node_new(AST_NODE_KIND_CONTINUE, token);
}

static inline AstNode *parse_return_stmt(Parser *parser)
{
  next(parser);
  AstNonLeafNode *retStmt = ast_nonleaf_node_new(AST_NODE_KIND_RETURN);
  AstNode *expr = NULL;
  if (match(parser, TOKEN_KIND_SEMICOLON))
  {
    next(parser);
    goto end;
  }
  expr = parse_expr(parser);
  consume(parser, TOKEN_KIND_SEMICOLON);
end:
  ast_nonleaf_node_append_child(retStmt, expr);
  return (AstNode *) retStmt;
}

static inline AstNode *parse_expr(Parser *parser)
{
  AstNode *lhs = parse_or_expr(parser);
  AstNodeKind kind = AST_NODE_KIND_ASSIGN;
  if (match(parser, TOKEN_KIND_EQ))
  {
    next(parser);
    goto end;
  }
  if (match(parser, TOKEN_KIND_PIPEEQ))
  {
    next(parser);
    kind = AST_NODE_KIND_BOR_ASSIGN;
    goto end;
  }
  if (match(parser, TOKEN_KIND_CARETEQ))
  {
    next(parser);
    kind = AST_NODE_KIND_BXOR_ASSIGN;
    goto end;
  }
  if (match(parser, TOKEN_KIND_AMPEQ))
  {
    next(parser);
    kind = AST_NODE_KIND_BAND_ASSIGN;
    goto end;
  }
  if (match(parser, TOKEN_KIND_LTLTEQ))
  {
    next(parser);
    kind = AST_NODE_KIND_SHL_ASSIGN;
    goto end;
  }
  if (match(parser, TOKEN_KIND_GTGTEQ))
  {
    next(parser);
    kind = AST_NODE_KIND_SHR_ASSIGN;
    goto end;
  }
  if (match(parser, TOKEN_KIND_PLUSEQ))
  {
    next(parser);
    kind = AST_NODE_KIND_ADD_ASSIGN;
    goto end;
  }
  if (match(parser, TOKEN_KIND_MINUSEQ))
  {
    next(parser);
    kind = AST_NODE_KIND_SUB_ASSIGN;
    goto end;
  }
  if (match(parser, TOKEN_KIND_STAREQ))
  {
    next(parser);
    kind = AST_NODE_KIND_MUL_ASSIGN;
    goto end;
  }
  if (match(parser, TOKEN_KIND_SLASHEQ))
  {
    next(parser);
    kind = AST_NODE_KIND_DIV_ASSIGN;
    goto end;
  }
  if (match(parser, TOKEN_KIND_PERCENTEQ))
  {
    next(parser);
    kind = AST_NODE_KIND_MOD_ASSIGN;
    goto end;
  }
  return lhs;
  AstNode *rhs;
end:
  rhs = parse_expr(parser);
  AstNonLeafNode *assign = ast_nonleaf_node_new(kind);
  ast_nonleaf_node_append_child(assign, lhs);
  ast_nonleaf_node_append_child(assign, rhs);
  return (AstNode *) assign;
}

static inline AstNode *parse_or_expr(Parser *parser)
{
  AstNode *lhs = parse_and_expr(parser);
  while (match(parser, TOKEN_KIND_PIPEPIPE))
  {
    next(parser);
    AstNode *rhs = parse_and_expr(parser);
    AstNonLeafNode *or = ast_nonleaf_node_new(AST_NODE_KIND_OR);
    ast_nonleaf_node_append_child(or, lhs);
    ast_nonleaf_node_append_child(or, rhs);
    lhs = (AstNode *) or;
  }
  return lhs;
}

static inline AstNode *parse_and_expr(Parser *parser)
{
  AstNode *lhs = parse_bor_expr(parser);
  while (match(parser, TOKEN_KIND_AMPAMP))
  {
    next(parser);
    AstNode *rhs = parse_bor_expr(parser);
    AstNonLeafNode *and = ast_nonleaf_node_new(AST_NODE_KIND_AND);
    ast_nonleaf_node_append_child(and, lhs);
    ast_nonleaf_node_append_child(and, rhs);
    lhs = (AstNode *) and;
  }
  return lhs;
}
